# emd-desafio-data-eng

./: .gitignore  Dockerfile  README.md  docker-compose.yml  dockerfile  entrypoint.sh  pyproject.toml  requirements.txt  run.py
analysis/: verificar_tabelas - prefect.ipynb  verificar_tabelas.ipynb
data/: brt_gps_202406162200.csv  brt_gps_202501202156.csv  brt_gps_202501202158.csv
dbt_brt/: .gitignore  .user.yml  dbt_project.yml  profiles.yml
dbt_brt/models/gold/: schema.yml  vw_brt_last_info.sql
dbt_brt/models/mart/: schema.yml  vw_brt_last_info.sql
pipelines/: __init__.py  constants.py  flows.py  schedules.py  tasks.py  utils.py
