[project]
name = "pipelines"
version = "0.1.0"
description = ""
authors = [
    {name = "nicolasevilasio",email = "nicolas_evilasio@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "prefect (==0.15.9)",
    "pandas (>=2.2.3,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "dbt-postgres (>=1.9.0,<2.0.0)",
    "dbt-core (>=1.9.1,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
